--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Musen Blog
-SEOTitle: 木森的博客 | BY Blog
+SEOTitle: 木森的博客 | Musen Blog
 header-img: img/post-bg-desk.jpg
 email: musen@cqu.edu.cn
 description: "Every failure is leading towards success."
