--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ github_repo: "https://github.com/qiubaiying/qiubaiying.github.io.git" # you code
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "心之所向，素履以往"
-sidebar-avatar: /img/1cd143544ca32cd0e4653f7639152754.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/1513243732350.jpg     # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
