--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Musen Blog
 SEOTitle: 木森的博客 | Musen Blog
-header-img: img/post-bg-desk.jpg
+header-img: img/head.jpg
 email: musen@cqu.edu.cn
 description: "Wherever your heart heads, always be."
 keyword: "Musen, Musen Blog, 木森的博客, Musen, iOS, Apple, iPhone"
