--- a/_config.yml
+++ b/_config.yml
@@ -73,8 +73,8 @@ gitalk:
 # 统计
 
 # Analytics settings
-Baidu Analytics
-ba_track_id: 1d46b9ced9590890b37cb4556ac4f03b
+#Baidu Analytics
+#ba_track_id: 1d46b9ced9590890b37cb4556ac4f03b
 
 # Google Analytics
 ga_track_id: 'UA-136508855-1'            # Format: UA-xxxxxx-xx
