--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ header-img: img/post-bg-desk.jpg
 email: musen@cqu.edu.cn
 description: "Wherever your heart heads, always be."
 keyword: "Musen, Musen Blog, 木森的博客, Musen"
-url: "http://musenming.github.io"          # your host, for absolute URL
+url: "http:/musen.site"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/musenming/musenming.github.io.git" # you code repository
 
