--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ header-img: img/post-bg-desk.jpg
 email: musen@cqu.edu.cn
 description: "Wherever your heart heads, always be."
 keyword: "Musen, Musen Blog, 木森的博客, Musen"
-url: "http://musen.site"          # your host, for absolute URL
+url: "musen.site"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/musenming/musenming.github.io.git" # you code repository
 
@@ -39,7 +39,7 @@ anchorjs: true                          # if you want to customize anchor. check
 
 # Gems
 # from PR#40, to support local preview for Jekyll 3.0
-gems: [jekyll-paginate]
+plugins: [jekyll-paginate]
 
 
 
@@ -57,11 +57,11 @@ kramdown:
 
 # 评论系统
 #Disqus（https://disqus.com/）
-#disqus_username: musenming
+disqus_username: musenming
 
 # Gitalk
 gitalk:
-  enable: true    #是否开启Gitalk评论
+  enable: false    #是否开启Gitalk评论
   clientID: c4377a029099e45c94d3                            #生成的clientID
   clientSecret: b61b8f0a8c70df861af335a566d3cebadf0d7b38    #生成的clientSecret
   repo: musenming.github.io    #仓库名称
