--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Musen Blog
 SEOTitle: 木森的博客 | Musen Blog
-header-img: img/bk.jpg
+header-img: img/bk2.gif
 email: musen@cqu.edu.cn
 description: "Wherever your heart heads, always be."
 keyword: "Musen, Musen Blog, 木森的博客, Musen"
@@ -31,7 +31,7 @@ facebook_username:  Senhao Liu
 # Build settings
 # from 2016, 'pygments' is unsupported on GitHub Pages. Use 'rouge' for highlighting instead.
 permalink: pretty
-paginate: 10
+paginate: 8
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
 anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html`
 
